Update .gitignore to include Playwright MCP directory

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ data/
 # Docker volumes
 .volumes/
 
+# Playwright MCP
+.playwright-mcp
+
 # Environment files with sensitive data
 .env.local
 .env.*.local
